--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,11 @@
 {
   "hosting": {
-    "public": "dist/crud"
+    "public": "public",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
